--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 websockets==15.0.1
 Flask==3.0.3
-flask-cors==4.0.1      # allow browser frontend to call your API
-pandas==2.2.2          # only if you’ll use the CSV/DataFrame example
+flask-cors==4.0.1      
+pandas==2.2.2         
+Flask-RESTful==0.3.10
+flasgger==0.9.7.1
