--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
+aniso8601==10.0.1
 annotated-types==0.7.0
 anyio==4.10.0
+attrs==25.3.0
+blinker==1.9.0
+cattrs==25.1.1
 certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.1.8
+contourpy==1.3.0
+cycler==0.12.1
 deprecation==2.1.0
 exceptiongroup==1.3.0
+fastf1==3.6.0
+flasgger==0.9.7.1
+Flask==3.1.2
+Flask-RESTful==0.3.10
+fonttools==4.59.2
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
@@ -10,14 +23,37 @@ httpcore==1.0.9
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+mistune==3.1.3
+numpy==2.0.2
 packaging==25.0
+pandas==2.3.2
+pillow==11.3.0
+platformdirs==4.4.0
 postgrest==1.1.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+RapidFuzz==3.13.0
 realtime==2.7.0
+referencing==0.36.2
+requests==2.32.5
+requests-cache==1.2.1
+rpds-py==0.27.1
+scipy==1.13.1
 six==1.17.0
 sniffio==1.3.1
 storage3==0.12.1
@@ -25,13 +61,12 @@ StrEnum==0.4.15
 supabase==2.18.1
 supabase_auth==2.12.3
 supabase_functions==0.10.1
+timple==0.1.8
 typing-inspection==0.4.1
 typing_extensions==4.14.1
-websockets==15.0.1
-Flask==3.0.3
-flask-cors==4.0.1      
-pandas==2.2.2         
-Flask-RESTful==0.3.10
-flasgger==0.9.7.1
-requests==2.32.5
+tzdata==2025.2
+url-normalize==2.2.1
 urllib3==1.26.6
+websockets==13.1
+Werkzeug==3.1.3
+zipp==3.23.0
