--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ venv/
 __pycache__/
 *.pyc
 .vscode/
+
+# Dependencies
+Frontend/node_modules/
+Frontend/.pnp
+Frontend/.pnp.*
+Frontend/.yarn/*
+!Frontend/.yarn/patches
+!Frontend/.yarn/plugins
+!Frontend/.yarn/releases
+!Frontend/.yarn/versions
+
+# Next.js build
+Frontend/.next/
+Frontend/out/
+Frontend/build/
+
+# Env files
+Frontend/.env*
+!Frontend/.env.example
+
+# TypeScript
+Frontend/*.tsbuildinfo
+Frontend/next-env.d.ts
+
+package-lock.json
