--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ Frontend/*.tsbuildinfo
 Frontend/next-env.d.ts
 
 package-lock.json
+
+FrontendPoko/node_modules
+FrontendPoko/.next
+FrontendPoko/out
